@@ -5,6 +5,7 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+  - 14-04-2005 fixed: Texture allocation thread-clash on windows/dialogs opened from fullscreen video.
   - 13-04-2005 fixed: PaPlayer FF/RW now works perfectly
   - 13-04-2005 fixed: PaPlayer audio device starving by increasing buffer size
   - 13-04-2005 fixed: highlighting in dvdmenu failed if an menu with different highlighting scheme had been displayed before
